--- a/pom.xml
+++ b/pom.xml
@@ -71,5 +71,10 @@
             <artifactId>mockito-all</artifactId>
             <version>1.10.19</version>
         </dependency>
+        <dependency>
+            <groupId>io.atomix</groupId>
+            <artifactId>atomix-resource</artifactId>
+            <version>1.0.0-rc1</version>
+        </dependency>
     </dependencies>
 </project>
