Zookeeper done. Can save/get state from zookeeper and the framework can now read the state off zookeeper during start up and intialize itself with this data

--- a/pom.xml
+++ b/pom.xml
@@ -76,5 +76,11 @@
             <artifactId>atomix-resource</artifactId>
             <version>1.0.0-rc1</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.2.2</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
