--- a/pom.xml
+++ b/pom.xml
@@ -73,8 +73,13 @@
         </dependency>
         <dependency>
             <groupId>io.atomix</groupId>
-            <artifactId>atomix-resource</artifactId>
-            <version>1.0.0-rc1</version>
+            <artifactId>atomix</artifactId>
+            <version>1.0.0-rc3</version>
+        </dependency>
+        <dependency>
+            <groupId>io.atomix.catalyst</groupId>
+            <artifactId>catalyst-netty</artifactId>
+            <version>1.0.4</version>
         </dependency>
         <dependency>
             <groupId>com.google.code.gson</groupId>
