--- a/pom.xml
+++ b/pom.xml
@@ -73,14 +73,10 @@
         </dependency>
         <dependency>
             <groupId>io.atomix</groupId>
-            <artifactId>atomix</artifactId>
+            <artifactId>atomix-all</artifactId>
             <version>1.0.0-rc3</version>
         </dependency>
-        <dependency>
-            <groupId>io.atomix.catalyst</groupId>
-            <artifactId>catalyst-netty</artifactId>
-            <version>1.0.4</version>
-        </dependency>
+
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
