--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
 language: java
 script:
-    - EXECUTOR_PATH="/usr/local/bin/enrique" mvn test
+  - EXECUTOR_PATH="/usr/local/bin/enrique" mvn test
+jdk:
+  - oraclejdk8
