--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,12 @@
                             <outputDirectory>${project.reporting.outputDirectory}/jacoco-it</outputDirectory>
                         </configuration>
                     </execution>
+                    <execution>
+                        <id>prepare-agent</id>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                    </execution>
                 </executions>
             </plugin>
             <plugin>
