--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,5 @@ notifications:
   slack:
     rooms:
       - mesos-magellan:5PrTLK3anCkczFrY3mBXHrGY#general
+after_success:
+  - mvn clean test jacoco:report coveralls:report
