--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
 language: java
 script:
-  - EXECUTOR_PATH="/usr/local/bin/enrique" mvn clean test jacoco:report coveralls:report
+  - EXECUTOR_PATH="/usr/local/bin/enrique" mvn test
 jdk:
   - oraclejdk8
 notifications:
   slack:
     rooms:
-      - mesos-magellan:5PrTLK3anCkczFrY3mBXHrGY#general
+      - mesos-magellan:5PrTLK3anCkczFrY3mBXHrGY#faleiro
 after_success:
   - mvn clean test jacoco:report coveralls:report
