--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,10 @@
     <groupId>groupId</groupId>
     <artifactId>faleiro</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+    </properties>
     <build>
         <plugins>
             <plugin>
