--- a/supervisord.conf
+++ b/supervisord.conf
@@ -27,6 +27,7 @@ serverurl=unix:///tmp/faleiro-supervisor.sock
 
 
 [program:faleiro-0]
-command=./run.sh
+command=java -cp target/faleiro-1.0-SNAPSHOT.jar org.magellan.faleiro.Web
 stderr_logfile = /var/log/faleiro/stderr.log
 stdout_logfile = /var/log/faleiro/stdout.log
+environment=PRINCIPAL="mesos_master",FRAMEWORK_USER="vagrant",MASTER_ADDRESS="10.144.144.10:5050",LIBPROCESS_PORT="5055",ZK_IP="127.0.0.1",ZK_PORT="2181",ZKNODE_PATH="/faleiro",ATOMIX_LOGS_DIR="logs",EXECUTOR_PATH="/usr/local/bin/enrique"
